@@ -1,6 +1,15 @@
 Changes
 =======
 
+Next release
+------------
+
+- Every form has a formid now, defaulting to ``deform``.  The formid
+  is used to compute the id of the form tag as well as the button ids
+  in the form.  Previously, if a formid was not passed to the Form
+  constructor, no id would be given to the rendered form and the
+  buttons would not be prefixed with any formid.
+
 0.1 (2010-05-09)
 ----------------
 
